# txttoqti

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  txttoqti_proposal.md
.github/prompts/: update-version.prompt.md
.github/workflows/: publish-to-pypi.yml  test-and-lint.yml  test-pypi-publish.yml
docs/: question-format.md  release-process.md
examples/: educational_example.py  sample_educational_questions.txt  sample_questions.txt
scripts/: setup-pypi-publishing.md
src/txttoqti/: __init__.py  converter.py  exceptions.py  parser.py  qti_generator.py  smart_converter.py
src/txttoqti/educational/: converter.py
tests/: sample_questions.txt  test_core.py  test_integration.py
